# rand_dist_prog_indicator

./: .travis.yml  CMakeLists.txt  README.md
include/: funcs.h
src/: funcs.cpp  main.cpp  tests.cpp
